@@ -1,3 +1,11 @@
+2013-01-30  Andreas Kupries  <andreask@activestate.com>
+
+	* library/platform/platform.tcl (::platform::LibcVersion): See
+	* library/platform/pkgIndex.tcl: [Bug 3599098]: Fixed the RE
+	  extracting the version to avoid issues with recent changes to
+	  the glibc banner. Now targeting a less variable part of the
+	  string. Bumped package to version 1.0.11.
+
 2013-01-26  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/tclUnixCompat.c: [Bug 3601804]: platformCPUID segmentation
